--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "wordcloud": "1.2.2",
-    "d3-cloud": "1.2.7"
+    "react-d3-cloud": "1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
