--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "wordcloud": "1.2.2",
-    "react-d3-cloud": "1.0.6"
+    "react-d3-cloud": "1.0.6",
+    "highcharts": "11.2.0",
+    "highcharts-react-official": "3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
