--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "highcharts": "11.2.0",
+    "highcharts-react-official": "3.2.1",
     "install": "^0.13.0",
     "npm": "^10.2.4",
     "react": "^18.2.0",
@@ -27,10 +29,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app"]
   },
   "browserslist": {
     "production": [
