Add abstimmungen connection to backend
- Reformat some small stuff such as proxy etc
- Change some names
- TODO: structure should probably be component-wise, not so flat

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app"]
+    "extends": [
+      "react-app"
+    ]
   },
   "browserslist": {
     "production": [
@@ -45,6 +47,5 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  },
-  "proxy": "http://localhost:8000/"
+  }
 }
