--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,9 @@
 version: "3.8"
 services:
-  development:
-      container_name: node
-      build: 
-        context: ./
-        dockerfile: Dockerfile
-      volumes:
-       - ./:/app
-       - /node_modules
-      restart: always
-      ports: 
-        - "8080:3000"
-      environment:
-        CHOKIDAR_USEPOLLING: 'true'
+  production:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "8080:80"
