--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "proxy": "http://host.docker.internal:8000/"
 }
