--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "victory": "^36.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
