--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "victory": "^36.8.1",
+    "react-thermometer-component": "1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
