--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dompurify": "^3.0.8",
     "highcharts": "11.2.0",
     "highcharts-react-official": "3.2.1",
     "install": "^0.13.0",
